# dotfiles

./: .bumpversion.cfg  .bumpversion.toml  .envrc  .gitignore  .gitmodules  .ignore  .mode.swo  .mode.swp  .pre-commit-config.yaml  50-zsa.rules  README.md  asdf  environment.yml  foo  foo.sh  install  install-all.sh  install-docker.sh  install-mac.conf.yaml  install-ssh.sh  install-ubuntu  install-ubuntu.conf.yaml  install.conf.yaml  install.py  install.sh  jupyter_notebook_config.py  justfile  mac.fish  main.py  npmrc  package-lock.json  prek.toml  problem  pyproject.toml  pyrightconfig.json  pytest.toml  requirements-neovim.txt  ripgrep_12.1.1_amd64.deb  ruff.toml  set-up.sh  (+10 more)
.installer/: install_apts  install_apts.sh  install_atom.sh  install_autojump  install_bash_it  install_bash_it.sh  install_blueman.sh  install_browsh.sh  install_conda  install_conda.sh  install_elm  install_elm.sh  install_fasd  install_lyx  install_lyx.sh  install_nodejs  install_nodejs.sh  install_nordvpn.sh  install_pdfarranger.sh  install_ripgrep  install_ripgrep.sh  install_rust  install_rust.sh  install_screenshot_locations  install_screenshot_locations.sh  install_snaps  install_snaps.sh  install_speedtest  install_speedtest.sh  install_zoxide  install_zoxide.sh  make_symlinks  make_symlinks.sh
.vim/: coc-settings.json
aichat/: config.example.yaml  config.yaml
bash/: .bashrc  aliases  aliases.sh  bash_profile  bash_profile.sh  bash_profile.symlink.sh  bashrc  bashrc.sh  bashrc.symlink.sh  completion-install.sh  configure_bash  configure_shopt.sh  init.sh  init_bash_it.sh  init_fzf_tab_completion  init_fzf_tab_completion.sh  init_git_aliases.sh  init_zoxide.sh  start_bash_it  start_dropbox  start_pureline  start_zoxide  ultimate_git_aliases
bottom/: bottom.toml
brew/: brew-install.sh  env.sh  install.sh
citrix/: install
conda/: init
configs/: asciinema.sh  authorized_keys  batwatch.sh  direnv.sh  dnsmasq.conf  fd.sh  fzf.sh  ghostty.sh  hypothesis.sh  ipython.sh  node.sh  npm.sh  postgres.sh  prek.sh  pyright.sh  pytest.sh  qrt-dotfiles.sh  ripgrep.sh  ruff.sh  shell.sh  sops.sh  starship.sh  starship.toml  tailscale.sh  tmux.conf  uv.sh  vimrc  wezterm.sh  zoxide.sh
direnv/: direnv.toml  direnvrc
docker/: docker.plist  install.sh
dropbox/: backup-dropbox  init  init.sh
elm/: completion.sh  install.sh
euporie/: config.json
fish/: config.fish  env.fish  git.fish  work.fish
fzf/: fzf.bash
ghostty/: config
git/: aliases.sh  aliases.zsh  bash-completion.bash  completion.sh  config  config.symlink  ignore  ignore.symlink
home/: .bash_profile  .bashrc  .profile  .ripgreprc  .shell.sh  .tmux.conf  .tmux.conf.local  .zinit.sh  .zprofile  .zshrc
i3/: config  config.symlink  status  status.symlink
ib-gateway/: aliases.sh
install/: constants.py  lib.py  more_constants.py  utilities.py
installer/: main  make_symlinks
installers/: cargo.sh  github-bin.sh  github-tar-gz.sh
iperf3/: iperf3.plist
ipython/: 1  imports.py  ipython_config.py  startup.py  test_ipython.py
jupyter/: aliases.sh  apputils.jsonc  docmanager.json  docmanager.jsonc  filebrowser.json  filebrowser.jsonc  jupyter_lab_config.py  jupyter_notebook_config.symlink.py  jupyterlab_code_formatter.jsonc  notebook.jsonc  notification.jsonc  shortcuts.json
keymapp/: install.sh
lazyvim/: lazy-lock.json  lazyvim.json
lunarvim/: config.lua  lazy-lock.json
marimo/: marimo.toml
mcphub/: servers.json
node/: completion.sh  install.sh  npmrc.symlink
npm/: npmrc
nushell/: config.nu  (+1 more)
(+630 files in other folders)
