[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]


[dependency-groups]
  dev = [
    "aeventkit>=2.1.0",
    "altair>=6.0.0",
    "atomicwrites>=1.4.1",
    "beartype>=0.22.9",
    "bidict>=0.23.1",
    "bs4>=0.0.2",
    "cachetools>=7.0.1",
    "cvxpy>=1.8.1",
    "dacite>=1.9.2",
    "dycw-utilities[test]>=0.191.1",
    "frozendict>=2.4.7",
    "holoviews>=1.22.1",
    "humanize>=4.15.0",
    "hvplot>=0.12.2",
    "hypothesis>=6.151.6",
    "ib-async>=2.1.0",
    "inflect>=7.5.0",
    "joblib>=1.5.3",
    "lightweight-charts>=2.1",
    "more-itertools>=10.8.0",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "orjson>=3.11.7",
    "polars-ols>=0.3.5",
    "polars>=1.38.1",
    "pqdm>=0.2.0",
    "pydantic>=2.12.5",
    "pyright>=1.1.408",
    "redis>=7.1.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "semver>=3.0.4",
    "sqlalchemy>=2.0.46",
    "stringcase>=1.2.0",
    "tabulate>=0.9.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "tzdata>=2025.3",
    "tzlocal>=5.3.1",
    "xarray>=2026.2.0",
  ]


[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = ["click>=8.3.1", "dycw-utilities>=0.191.1", "libcst>=1.8.6"]
  description = "Dotfiles"
  name = "dycw-dotfiles"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.4.24"

  [project.scripts]
    dotfiles-cli = "dotfiles._cli:cli"

  [project.optional-dependencies]
    cli = ["dycw-utilities==0.191.1"]


[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "dotfiles"
      module-root = "src"
